[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/Items/BagOfFlowers.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Particles/BagOfFlowersBar_under.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Particles/BagOfFlowersBar_progress.png" type="Texture" id=3]

[node name="BagOfFlowers" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureProgress" parent="."]
margin_left = -4.0
margin_right = 3.0
margin_bottom = 18.0
max_value = 10.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
